--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,6 @@ spring:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:inmemory;MODE=PostgreSQL
     schema: classpath:schema.sql
+  jpa:
+    hibernate:
+      ddl-auto: none
